iptables-backup.txt
# Generated by iptables-save v1.8.10 (nf_tables) on Thu Dec  4 10:28:48 2025
*filter
:INPUT ACCEPT [21600:11528414]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [18358:13522169]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A DOCKER ! -i br-linkchat -o br-linkchat -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o br-linkchat -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o br-linkchat -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i br-linkchat -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
COMMIT
# Completed on Thu Dec  4 10:28:48 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Thu Dec  4 10:28:48 2025
*nat
:PREROUTING ACCEPT [212:55616]
:INPUT ACCEPT [73:12336]
:OUTPUT ACCEPT [1122:89284]
:POSTROUTING ACCEPT [1121:89252]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A PREROUTING -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.1.1:8080
-A PREROUTING -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.1.1:8080
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-linkchat -j MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Thu Dec  4 10:28:48 2025
